fix alignfull

--- a/sass/custom-editor-style.scss
+++ b/sass/custom-editor-style.scss
@@ -19,7 +19,6 @@
 	margin-right: auto;
 	}
 	.wp-block {
-		background-color: $gray-100;
 		border: 1px dotted $gray-300;
 		max-width: 1100px !important;
 		padding: 1rem;
